# component-library

./: .README.md.swo  .README.md.swp  .gitignore  7z  AssignmentAnomalyDetection.ipynb  Assinment01  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Coursera  Coursera.txt  FAQ.md  README.md  SECURITY.md  SUPPORT.md  TestPullRequest.txt  Thanks.txt  VULNERABILITIES.md  adnan git demo  analyze_excess_mortality.ipynb  applied_ai_challenge.ipynb  build_operators.sh  codenet_classification.pipeline  contribution_process.md  covid19.sql  covid21.pipeline  first note.ipynb  hmp.parquet  pyproject.toml  release_process.md  rklib.py  setup.py  spark_setup_anaconda.ipynb  stock.pipeline  test.ipynb  test_requirements.txt  testchild.py
.github/: build_operators.sh  build_operators_commits.txt  pull_request_template.md
Submited/: AssignmentAnomalyDetectionNew.ipynb.ipynb  AssignmentAnomalyDetectionNew.py  AssignmentSystemMLApacheSystemDS.ipynb (2).ipynb  AssignmentSystemMLApacheSystemDS_ipynb_(2).ipynb  assignmentsystemmlapachesystemds_ipynb_(2).py
artwork/: README.md
bd225/: kube_lab.md
c3/: create_component_library.ipynb  generate_kfp_component.ipynb  notebook.py  parser.py
claimed/: generic-notebook-runner.ipynb
component-library/: claimed_utils.py  generic-notebook-runner.ipynb  run_tests.py  voila-notebook-runner.ipynb
coursera_ai/: AssignmentAnomalyDetection.ipynb  AssignmentKeras.ipynb  AssignmentSystemML.ipynb  AssignmentWarmup.ipynb  BhausabP.ipynb  rklib.py
coursera_capstone/: Lightweight_IBM Cloud_Garage_Method_for_Data_Science_ADD_Template.docx
coursera_ds/: IoT Data Storage Calculator IBM Cloud.ods  IoT Data Storage Calculator IBM Cloud.xls  a0_m2_flow1.json  a0_m2_flow2.json  a0_m3_exercice2.ipynb  a0_m3_exercice2_spark2.3_python3.5_cos.ipynb  a0_m3_p5.ipynb  a0_m4_exercice2_spark2.3_python3.5_cos.ipynb  a0_m4_exercice3.1.ipynb  a0_m4_exercice3.1_spark2.3_python3.5_cos.ipynb  a0_m4_exercice3.2.ipynb  a0_m4_exercice3.2_spark2.3_python3.5_cos.ipynb  a2_w1_s3_SparkML_GBT_GridSearch.ipynb  assignment1.1.ipynb  assignment1.2.ipynb  assignment2.1.ipynb  assignment2.1_spark2.3_python3.5.ipynb  assignment2.1_spark2.3_python3.5_cos.ipynb  assignment2.1_spark2.3_python3.6.ipynb  assignment3.1.ipynb  assignment3.1_spark2.3_python3.5_cos.ipynb  assignment4.1.ipynb  assignment4.1_spark2.3_python3.5_cos.ipynb  (+3 more)
(+395 files in other folders)
