[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/_version.py"

[project]
name="claimed"
version = "0.2.0"
authors = [
  { name="The CLAIMED authors", email="claimed-framework@proton.me"},
]
maintainers = [
  { name="Romeo Kienzler", email="claimed-framework@proton.me"},
  { name="Benedikt Blumenstiel"},
]
description = "The CLAIMED framework includes a library of reusable operators, a CLI and the CLAIMED Component Compiler (C3)."
readme = "README.md"
requires-python=">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["CLAIMED", "component-library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
  "aiobotocore",
  "botocore",
  "s3fs",
  "claimed-c3",
  "claimed-cli",
]

[tool.setuptools.packages.find]
include = ["claimed*"]

[project.urls]
"Homepage" = "https://github.com/claimed-framework/component-library"
"Bug Tracker" = "https://github.com/claimed-framework/component-library/issues"

